# PhysicsStudio

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
.github/workflows/: ci.yml  test.yml
cmake/: Version.h.in  dmg_setup.scpt
docs/: ARCHITECTURE.md  BASECOMPONENT_DESIGN.md  CLASS_RELATIONSHIPS.md  CODE_STYLE_GUIDE.md  COMPONENT_REGISTRY_DESIGN.md  ELECTRONICS_SOLVER_DESIGN.md  INTERACTION_FLOW.md  PHASE_0_1_VALIDATION_REPORT.md  PHASE_0_1b_CHECKLIST.md  PHASE_1_UI_FOUNDATION_REPORT.md  PHASE_PLAN.md  SOLVER_ARCHITECTURE.md  WINDOWS_SETUP_KIT.md  WINDOWS_TRANSITION.md
resources/: physicsstudio.desktop  resources.qrc
resources/examples/: electronics_divider.pss  electronics_rc_filter.pss  electronics_transistor.pss  motion_bounce.pss  motion_pendulum.pss  optics_lens.pss  waves_interference.pss  waves_ripple.pss
resources/practicals/circuits/: 01_basic_circuit.pss  02_current_voltage.pss  03_ldr_thermistor.pss  04_ohms_law.pss  05_parallel_circuit.pss  06_series_resistors.pss  07_series_lamps.pss  08_series_batteries.pss
resources/practicals/describing_motion/: 01_distance_time.pss  02_velocity_time.pss  03_acceleration.pss
resources/practicals/electrical_energy/: 01_ac_dc.pss  02_cost_energy.pss  03_electric_power.pss  04_fuse.pss  05_high_power.pss  06_low_power.pss  07_transformer.pss
resources/practicals/energy_motion/: 01_momentum_definition.pss  02_momentum_conservation.pss  03_momentum_change.pss  04_kinetic_energy.pss  05_changing_speed.pss  06_energy_change.pss  07_gravity_gpe.pss  08_collisions.pss  09_elastic_inelastic.pss
resources/practicals/force_acceleration/: 01_circular_motion.pss  02_circular_radius.pss  03_circular_mass.pss  04_newton_first.pss  05_newton_second.pss  06_newton_third.pss  07_resultant_force.pss  08_stopping_distance.pss  09_traction.pss  10_unequal_forces.pss  11_weight.pss  12_balanced_forces.pss  13_defining_newton.pss  14_friction.pss  15_pendulum.pss
resources/practicals/optics/: 01_angle_reflection.pss  02_convex_mirror.pss  03_mirror_reflection.pss  04_camera_lens.pss  05_magnifying_glass.pss  06_magnification.pss  07_mirror_applications.pss  08_telescope.pss
resources/practicals/waves/: 01_absorption.pss  02_diffraction.pss  03_doppler_effect.pss  04_interference.pss  05_loudness_pitch.pss  06_electromagnetic.pss  07_speed_sound.pss  08_ultrasound.pss
scripts/: build-release.sh  package-macos.sh  package-windows.bat
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/canvas/: CanvasView.cpp  CanvasView.h  OpticsOverlay.cpp  OpticsOverlay.h  WaveFieldOverlay.cpp  WaveFieldOverlay.h
src/components/: BaseComponent.cpp  BaseComponent.h  ComponentMimeTypes.h  ComponentRegistry.cpp  ComponentRegistry.h  ConnectionPad.h  Wire.cpp  Wire.h
src/components/electronics/: ElectronicsComponents.cpp  ElectronicsComponents.h
src/components/motion/: MotionComponents.cpp  MotionComponents.h
src/components/optics/: OpticsComponents.cpp  OpticsComponents.h
src/components/wave/: WaveComponents.cpp  WaveComponents.h
src/interaction/: AddPartCommand.cpp  AddPartCommand.h  AddWireCommand.cpp  AddWireCommand.h  ChangePropertyCommand.cpp  ChangePropertyCommand.h  DeletePartCommand.cpp  DeletePartCommand.h  DeleteWireCommand.cpp  DeleteWireCommand.h  MovePartCommand.cpp  MovePartCommand.h  UndoRedoStack.cpp  UndoRedoStack.h
src/persistence/: ProjectDocument.cpp  ProjectDocument.h
src/simulation/: SimulationLoop.cpp  SimulationLoop.h  SolverInterfaces.h
src/simulation/electronics/: ElectronicsSolver.cpp  ElectronicsSolver.h
src/simulation/motion/: MotionSolver.cpp  MotionSolver.h
src/simulation/optics/: OpticalSolver.cpp  OpticalSolver.h
src/simulation/wave/: WaveSolver.cpp  WaveSolver.h
src/ui/contentspanel/: ContentsPanel.cpp  ContentsPanel.h
src/ui/graph/: DataLogger.cpp  DataLogger.h  GraphPanel.cpp  GraphPanel.h
src/ui/partspanel/: PartsPanel.cpp  PartsPanel.h
src/ui/properties/: PropertiesPanel.cpp  PropertiesPanel.h
tests/: CMakeLists.txt  test_data_logger.cpp  test_motion_solver.cpp  test_wave_solver.cpp
